--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -1,8 +1,22 @@
-# DDPSC Raspberry Pi Teacher's Workshop: Working with Raspberry Pi
+# Missouri EPSCoR Computer Science Institute for Women
+
+This csiw_2015 branch contains the materials from the CSIW 2015 workshop.
+
+## Funding
+Raspberry Pi Foundation  
+National Science Foundation  
+Missouri EPSCoR  
+
+#Day 1  
+*  Introduction to Raspberry Pi Computers
+*  Introduction to Github and collaborative coding
+*  Introduction to Linux
+*  Insights into Computer Science: Abby Stylianou
+*  Introduction to rePhoto
+*  Tour of the Danforth Center and Maker technologies
 
 ##Introduction to Raspberry Pi
 
-*  See slide decks [here](https://github.com/danforthcenter/outreach/tree/master/raspi_teachers_2015/Presentations)
 *  See these websites for more information on how to use Raspberry Pis:
     *  [https://www.raspberrypi.org/](https://www.raspberrypi.org/)
     *  [http://sonic-pi.net/](http://sonic-pi.net/)
