--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -21,35 +21,109 @@ Missouri EPSCoR
     *  [https://www.raspberrypi.org/](https://www.raspberrypi.org/)
     *  [http://sonic-pi.net/](http://sonic-pi.net/)
     *  [https://learn.adafruit.com/category/raspberry-pi](https://learn.adafruit.com/category/raspberry-pi)
-    *  [http://www.raspberrypitutorials.yolasite.com/](http://www.raspberrypitutorials.yolasite.com/)
+    *  [http://www.raspberrypitutorials.yolasite.com/](http://www.raspberrypitutorials.yolasite.com/)  
 
-##Putting the Operating System (OS) on the Raspberry Pi
-In this session we will learn to work with Raspberry Pi computers and later the Raspberry Pi camera module. Raspberry Pi computers are small, single-board computers that cost between $20-35.
-The Raspberry Pi computers you will work with today are Pi 2 Model B ($35, 4-core ARM CPU, 1GB RAM) [Link](https://www.raspberrypi.org/products/raspberry-pi-2-model-b/).
-Our Raspberry Pis are running a Linux operating system "Raspbian" which is a fork of Debian 7 "Wheezy." The operating system is on the microSD card in your Pi. We've 'flashed' the cards for you
-but if you want to do one yourself you can download the operating system from the [Raspberry Pi website](https://www.raspberrypi.org/downloads/). For Mac users we recommend using the free program
-ApplePi-Baker that is available [here](http://www.tweaking4all.com/hardware/raspberry-pi/macosx-apple-pi-baker/) putting a disk image on a card, scroll down to download the **non-sudo version**.
-For Windows users, options for flashing cards can be found [here](http://www.tweaking4all.com/hardware/raspberry-pi/install-img-to-sd-card/#windows).  
+*  Other useful websites:
+  *  Thingiverse has lots of patterns to 3D print [here](https://www.thingiverse.com/)
+  *  Raspberry Pis are computers but Arduino microcontrollers are also very useful for projects [here](https://www.arduino.cc/)
+  *  OpenScad is a free program to design 3D objects [here](http://www.openscad.org/)
+  *  More info on Github pages [here](https://pages.github.com/)
+  *  Jekyll is a tool to help develop your website with Github [here](https://help.github.com/articles/using-jekyll-with-pages/)
 
-##Next we will set up the Raspberry Pi configurations
+## Raspberry Pi Command line vs. GUI
 
-For more information see the [Raspberry Pi Github Page](/github.com/raspberrypi/documentation/blob/master/configuration/README.md). There will be more on using GitHub later.
-
-
-In addition to the command-line interface, Raspberry Pi computers can run a desktop environment. To start it type after logging in:
+In addition to the command-line interface, Raspberry Pi computers can run a desktop environment (graphical user interface, or GUI). To start it type after logging in:
 
 ```
 startx
 ```
+##Introduction to Github and Linux
 
-##Basic Linux operations  
+**[Github](https://github.com/): Github is a way to code collaboratively, or to find code to jumpstart your project. Github + Jekyll + Markdown is also an easy way to set up a website for your projects. All of our workshop materials are available on Github, this allow us to make updates as we go along and to make the materials available to you later on**
 
-What is Linux?: Linux is an operating system, which is software that supports basic computer functions.
+**What is Linux?: Linux is an operating system, which is software that supports basic computer functions.
 Other examples of operating systems are Unix, Mac OS, Windows XP or Windows 7. You can do things like,
-make files, move files, copy files, make directories (folders) etc. etc. but instead of seeing icons like a Windows or Mac interface you would use text (the command line).
-
+make files, move files, copy files, make directories (folders) etc. etc. but instead of seeing icons like a Windows or Mac interface you would use text (the command line).**
 
 From the desktop you can run a terminal program to continue to use the command-line interface (called LXTerminal).
+
+To clone a basic repository in LXterminal type:
+
+```
+git clone "copied repository link"
+
+```
+
+**To clone our workshop materials (6 Steps)**
+
+Step 1:  
+
+```Python
+# List your current location (you want know where you are putting the workshop materials)
+
+pwd
+```
+Step 2:
+
+```
+# List the files in your current location
+
+ls -l
+```
+Step 3:
+
+```
+# Make a folder for the workshop materials
+
+mkdir csiw_2015
+```
+Step 6:
+
+```
+# See the new folder you just made
+
+ls -l
+
+```
+
+Step 5:
+
+```
+# Move to the folder you just made
+
+cd /home/pi/csiw_2015
+```
+
+Step 6: 
+
+```
+# clone the outreach materials from github into your new folder
+
+git clone https://github.com/danforthcenter/outreach.git --branch csiw_2015 
+
+```  
+
+# Getting Updated Materials from Github
+
+**We might update materials as the workshop goes on. To update the materials on your computer there are 2 steps**
+
+Step 1.
+
+```
+# Make sure you are in your github folder
+
+cd /home/pi/csiw_2015/outreach/
+
+```
+
+Step 2.
+
+```
+# Pull the new information from github
+
+git pull
+
+```
 
 ##Basic Linux shell commands  
 
@@ -104,115 +178,6 @@ If you need help on how/why to use a command the best thing to do is to google i
 **apt-get install** ***program*** - apt-get is the Debian Linux package manager. You can use it to install new software on your computer
 
 **apt-get update** - update the installed packages on your system 
-
-
-##Introduction to Github and other websites of interest.
-
-*  [Github](https://github.com/): Github is a way to code collaboratively, or to find code to jumpstart your project. Github + Jekyll + Markdown is also an easy way to set up a website for your projects. 
-
-
-To clone a repository in LXterminal type:
-
-```
-
-git clone https://github.com/danforthcenter/outreach.git
-
-```
-
-We won't be doing this today, but you can also add data to a repository if you've made changes.
-
-Four steps add data to a repository (that you have permissions to you can also do a 'pull' request that is asking for permission to push):
-
-1)  To add data to a repository: (make sure you are in right folder)
-
-```
-# the . means to add all
-# instead of adding all you can add specific files
-git add .
-
-```
-
-2)  To commit data to a repository:
-
-```
-# commit the additions to the repository
-# minimally needs a metadata message
-git commit -m "adding new data to this repository"
-
-```
-
-3)  Pull the repository to merge your committed changes with the newest version of the repository.
-
-```
-# make sure your version of the files are up to date before you try to add new things to the repository
-git pull
-
-```
-
-4)  Push your data to the repository.
-
-```
-# push your new data to the repository
-git push
-
-```
-
-Other important websites:
-*  Thingiverse has lots of patterns to 3D print [here](https://www.thingiverse.com/)
-*  Raspberry Pis are computers but Arduino microcontrollers are also very useful for projects [here](https://www.arduino.cc/)
-*  OpenScad is a free program to design 3D objects [here](http://www.openscad.org/)
-*  More info on Github pages [here](https://pages.github.com/)
-*  Jekyll is a tool to help develop your website with Github [here](https://help.github.com/articles/using-jekyll-with-pages/)
-
-##Pi passwords and backing up files
-
-The OS Raspbian comes with a single preconfigured user account (username: pi, password: raspberry). The pi user account is a privileged user, meaning that it has the capability of installing software, modifying the computer settings, etc. This can be a great way to learn how to administer Linux systems but for a classroom setting it could potentially lead to accidental changes that could ruin a project. There are two complementary ways to address this problem.
-
-###Secure the pi user account and create a student user account
-1) Anyone on the internet can find the default username/password, so change the pi user password to something more secure.
-
-```
-passwd
-
-# Follow the instructions to set a new password
-```
-
-2) Create a new student account. By default new users are not privileged users. As the pi user you have access to administrator (root) capabilities using the "sudo" command.
-
-```
-sudo useradd -b /home -m -g users student
-
-# sudo lets the pi user execute the useradd command as the administrator
-# -b sets the base location of the student user home directory
-# -m tells useradd to create the home directory
-# -g users sets the student account group to users
-```
-
-3) Set the password for the student account
-
-```
-sudo passwd student
-
-# Follow the instructions to set a password for the student account.
-# This is the same command you used to set the pi user password
-# except that here you are using administrator privilege to set the
-# password for another account.
-```
-
-###Create a backup of your Raspberry Pi SD card
-You should always have a backup of programs that you've spent significant time on. One method of doing that is to have a Github repository with all of your important working scripts that you can download if something gets deleted or modified. Another method is to save a disk image.
-
-Creating a periodic backup of your Raspberry Pi SD card is another way to protect your classroom projects. Additionally, a single backup can be used to clone one configured Raspberry Pi onto many Raspberry Pis. Restoring or cloning a Raspberry Pi is easy, so there is less risk that giving students full access to the Raspberry Pi will cause unrecoverable problems.
-
-The easiest way to create a backup is to mount the SD card onto a Mac or Windows computer with an SD card reader and use [ApplePi-Baker](http://www.tweaking4all.com/hardware/raspberry-pi/macosx-apple-pi-baker/) or a [Windows-based](http://www.tweaking4all.com/hardware/raspberry-pi/install-img-to-sd-card/#windows) card flashing utility to create an image of the Raspberry Pi SD card that you store on your Mac or Windows computer. You can use these utilities to restore your Raspberry Pi or clone the same OS image onto other Raspberry Pi SD cards.
-
-##Introduction to Soldering
-
-Soldering is basically like metal glue. We will be soldering a small IR light panel so that we can take images at night.
-
-*  More on how to solder [here](https://learn.adafruit.com/adafruit-guide-excellent-soldering/tools)
-*  And [here](https://github.com/danforthcenter/outreach/tree/master/raspi_teachers_2015/How%20to%20solder)
-
 
 ##Using the Raspberry Pi camera
 
@@ -280,32 +245,6 @@ raspistill -o /home/pi/images/$(date +"%Y-%m-%d_%H:%M:%S")_images.jpg
 should show up, take another picture.
 ```
 
-##Configure the Bright Pi module to add lighting to our images
-In order to use the Bright Pi module we need to set up our Raspberry Pi computers to use the GPIO pins following the instructions at [Adafruit](https://learn.adafruit.com/adafruits-raspberry-pi-lesson-4-gpio-setup/configuring-i2c).
-
-Next, wire your Bright Pi light module following the wiring instructions on screen and at [Pi Supply](https://www.pi-supply.com/bright-pi-v1-0-assembly-instructions/).
-
-Because our Bright Pi LED lights are infrared we cannot look at them to see if they are on and working. But, because we are combining the Bright Pi light modules with the PiNoIR camera modules we can use the camera to see if the lights work. The [Pi Supply](https://www.pi-supply.com/bright-pi-v1-0-code-examples/) page describes the basics of controlling the Bright Pi with I2C [Inter-Integrated Circuit](https://en.wikipedia.org/wiki/I%C2%B2C) commands.
-
-For today's workshop we will demonstrate controlling both the Bright Pi light module and the camera module using the Python programming language. Let's go over the example script, LightsCameraAction.py, that was cloned with the Github repository.
-
-```
-python LightsCameraAction.py --help
-
-usage: LightsCameraAction.py [-h] [--on] [--white] [--ir] [--off]
-                             [--outdir OUTDIR]
-
-Turn on/off Pi Bright LED lights.
-
-optional arguments:
-  -h, --help       show this help message and exit
-  --on             Turn all the lights on (default: False)
-  --white          Turn on the white lights only (default: False)
-  --ir             Turn on the IR lights only (default: False)
-  --off            Turn all the lights off (default: False)
-  --outdir OUTDIR  Output directory path (default: .)
-```
-
 ## Take a time-lapse
 
 After you take a few pictures and are satisfied with the setup you can take a time-lapse
@@ -330,20 +269,6 @@ crontab.
 ## Use cron to take images on a schedule (time-lapse)
 
 Crontab is an easy way to schedule repeating tasks so it can be used as another way to do time-lapse imaging, like time-lapse imaging.  
-
-# First we will disable the red light on your camera
-
-```
-#This opens up the config.txt file in using the leafpad text editor program  
-
-sudo leafpad /boot/config.txt  
-
-#Then add the following to the end of the file to diable 
-
-disable_camera_led=1
-
-#Then save and exit
-``` 
 
 Now make a folder called timelapse and open crontab in a text editor
 
@@ -372,7 +297,7 @@ Add the following line to the cron file (you should see a list of commands that 
 ```
 #this tells the command to run every 10 min of every hour every day of the month every day of the week.
 
-*/10 * * * * pi python /home/pi/outreach/raspi_teachers_2015/LightsCameraAction.py --white --off --outdir /home/pi/timelapse
+*/1 * * * * pi /usr/bin/raspistill -o /home/pi/timelapse2/$(date +"\%Y-\%m-\%d_\%H:\%M:\%S")_timelapse.jpg
 
 #save the file and close it
 
@@ -385,12 +310,12 @@ sudo service cron restart
 
 ```
 
-Can I test my commands before putting them into crontab?
-- Yes! Just run them on the command line first in the terminal!!!!
-- Why use crontab?
-  - It will automatically run task as scheduled, even after reboot!
-  - Time is set after booting and internet access, but if no internet, it will set time to last available time, which can cause problems. Hope you have wifi!!!!
-  - Alt: can hardwire a clock with battery.
+* Can I test my commands before putting them into crontab?  
+  *  Yes! Just run them on the command line first in the terminal!!!!
+* Why use crontab?
+  *  It will automatically run task as scheduled, even after reboot!
+
+**Note:** Time is set after booting and internet access, but if no internet, it will set time to last available time, which can cause problems. Hope you have wifi!!!! Alt: can hardwire a clock with battery.
 
 
 ## Assembling your time-lapse into a short movie
@@ -401,12 +326,9 @@ first we need to write all of image names into a text file, but we can do that u
 
 # This takes all of jpg files in your current folder and writes their names to a file called stills.txt 
 
-cd /home/pi/timelapse2/
+cd /home/pi/timelapse/
 
 ls *.jpg > stills.txt
-
-#If you only wanted to use every other image (we won't be doing this)
-awk 'NR%2==0' stills.txt > stills_even.txt
 
 ```  
 
@@ -419,16 +341,20 @@ now we can assemble the files into a time-lapse movie
 # -o tell the program what to name your file
 # -mf tells the program what file format and the number of frames per second that you want, as well as the file with all the image names
 
-mencoder -nosound -ovc lavc -lavcopts vcodec=mpeg4:aspect=16/9:vbitrate=8000000 -vf scale=1920:1080 -o timelapse.avi -mf type=jpeg:fps=24 mf://@stills_even.txt
+mencoder -nosound -ovc lavc -lavcopts vcodec=mpeg4:aspect=16/9:vbitrate=8000000 -vf scale=1920:1080 -o timelapse.avi -mf type=jpeg:fps=24 mf://@stills.txt
 
 #if you need to flip your images
-mencoder -nosound -ovc lavc -lavcopts vcodec=mpeg4:aspect=16/9:vbitrate=8000000 -vf scale=1920:1080 -flip -o timelapse.avi -mf type=jpeg:fps=24 mf://@stills_even.txt
+mencoder -nosound -ovc lavc -lavcopts vcodec=mpeg4:aspect=16/9:vbitrate=8000000 -vf scale=1920:1080 -flip -o timelapse.avi -mf type=jpeg:fps=24 mf://@stills.txt
 
 ```
 
-To see your videos we will also add them to a playlist here
+```
+# To play your video use the program omxplayer
 
-[playlist link](https://www.youtube.com/playlist?list=PLimbrUa_ArHwJ9n_HL_IQsU0pAGpnxtPD)
+omxplayer timelapse.avi
+
+```
+
 
 ##Now let's move your movie to a folder with your name
 
@@ -455,30 +381,6 @@ mv /home/pi/images/timelapse2/timelapse.mp4 /home/pi/yourname/timelapse.mp4
 ls -l /home/pi/yourname/
 
 ```
-
-##Introduction to Raspberry Pi Sensors
-
-There are numerous sensors that are available for Raspberry Pi computers and also for Arduino microcontrollers.
-
-*  Adafruit has a nice selection of sensors and tutorials [here](http://www.adafruit.com/category/35)
-*  The best way to find out how to use a sensor is to google it and find online tutorials.
-
-We will be using four different 'sensor' modules today
-
-1. Light panel: Bright Pi, more information [here](https://github.com/danforthcenter/outreach/tree/master/raspi_teachers_2015/Bright%20Pi%20assembly%20instructions)  
-2. Temperature sensor: More information [here](https://www.adafruit.com/product/1893) 
-3. Temperature sensor #2 : More information [here](http://www.adafruit.com/products/393)
-4. Light sensor: More information [here](https://www.adafruit.com/products/439)
-
-How to make your Raspberry pi more 'rugged'
-*  Weather proofing in a coffee can by Jim at fotosyn [here](http://www.fotosyn.com/simple-timelapse-camera-using-raspberry-pi-and-a-coffee-tin/)
-*  See post on 5 different cases [here](http://www.makeuseof.com/tag/5-ways-to-ruggedise-your-raspberry-pi/)
-*  This Rustoleum coating might work [here](http://www.geek.com/chips/neverwet-makes-the-raspberry-pi-and-other-gadgets-waterproof-1564340/)
-
-##Connecting a sensor to a Google doc
-
-**More here from Noah**
-
 ##Opensource tools for image analysis
 
 Collecting time lapse images are great for demonstrating concepts of plant growth, plant movement, and circadian rhythms.
@@ -547,19 +449,3 @@ If you had many images to process you would then use the "parallelization" scrip
 then saves the data to a database. We won't be doing that today but the instructions are [here](http://plantcv.danforthcenter.org/pages/documentation/function_docs/vis_tutorial.html).
 If you had run a full set of data (many plants growing over a period of time) you could then use R to analyze the data.
 
-
-##Introduction to Scratch
-
-**More here from Meter**
-
-##Tech Trunk Discussion Notes
-
-**Moderated by Terry**
-
-**Notes:**
-
-##Module planning notes
-
-**Moderated by Terry**
-
-**Notes:**
