--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -7,15 +7,20 @@ Raspberry Pi Foundation
 National Science Foundation  
 Missouri EPSCoR  
 
+# Table of Conents
+* [Day 1](#day-1)
+* [Day 2](#day-2)
+* [Day 3](#day-3)
+
 #Day 1  
-*  Introduction to Raspberry Pi Computers
+*  [Introduction to Raspberry Pi Computers](#introduction-to-raspberry-pi)
 *  Introduction to Github and collaborative coding
 *  Introduction to Linux
 *  Insights into Computer Science: Abby Stylianou
 *  Introduction to rePhoto
 *  Tour of the Danforth Center and Maker technologies
 
-##Introduction to Raspberry Pi
+## Introduction to Raspberry Pi
 
 *  See these websites for more information on how to use Raspberry Pis:
     *  [https://www.raspberrypi.org/](https://www.raspberrypi.org/)
