Added Day 1 TOC

--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -14,8 +14,9 @@ Missouri EPSCoR
 
 #Day 1  
 *  [Introduction to Raspberry Pi Computers](#introduction-to-raspberry-pi)
-*  Introduction to Github and collaborative coding
-*  Introduction to Linux
+*  [Introduction to Github and collaborative coding](#introduction-to-github-and-linux)
+*  [More with Linux](#basic-linux-shell-commands)
+*  [Using the Raspberry Pi camera](#using-the-raspberry-pi-camera)
 *  Insights into Computer Science: Abby Stylianou
 *  Introduction to rePhoto
 *  Tour of the Danforth Center and Maker technologies
@@ -35,7 +36,7 @@ Missouri EPSCoR
   *  More info on Github pages [here](https://pages.github.com/)
   *  Jekyll is a tool to help develop your website with Github [here](https://help.github.com/articles/using-jekyll-with-pages/)
 
-## Raspberry Pi Command line vs. GUI
+### Raspberry Pi Command line vs. GUI
 
 In addition to the command-line interface, Raspberry Pi computers can run a desktop environment (graphical user interface, or GUI). To start it type after logging in:
 
@@ -108,7 +109,7 @@ git clone https://github.com/danforthcenter/outreach.git --branch csiw_2015
 
 ```  
 
-# Getting Updated Materials from Github
+### Getting Updated Materials from Github
 
 **We might update materials as the workshop goes on. To update the materials on your computer there are 2 steps**
 
@@ -188,7 +189,7 @@ If you need help on how/why to use a command the best thing to do is to google i
 
 The Raspberry Pi camera module is a 5 megapixel, fixed-focus camera add-on for the Raspberry Pi. Each of your Raspberry Pi computers has a camera module installed. Your camera module is the Pi NoIR model (the infrared filter has been removed).
 
-## Take a picture
+### Take a picture
 
 To take a picture, see it, and save it with the name *image.jpg* use the following command:
 
@@ -224,7 +225,7 @@ display /home/pi/images/image1.jpg
 
 ```
 
-##Flip a picture if it is upside down
+###Flip a picture if it is upside down
 
 Is your picture upsidedown when you look at it? If it is you will need to add the -vf (vertical flip) flag to your command.
 
@@ -234,7 +235,7 @@ raspistill -vf -o image1.jpg
 
 ```
 
-## Save images with unique names and some metadata
+### Save images with unique names and some metadata
 If you add the current date and time to the name of your images you can use the same command over and over again because each image will have a unique name and doesn't get overwritten.
 
 
@@ -250,7 +251,7 @@ raspistill -o /home/pi/images/$(date +"%Y-%m-%d_%H:%M:%S")_images.jpg
 should show up, take another picture.
 ```
 
-## Take a time-lapse
+### Take a time-lapse
 
 After you take a few pictures and are satisfied with the setup you can take a time-lapse
 
@@ -266,12 +267,12 @@ raspistill -t 60000 -tl 3000 -o /home/pi/images/image%05d.jpg
 
 ```
 
-## What happens if the computer shuts off during the time-lapse?  
+### What happens if the computer shuts off during the time-lapse?  
 
 In order to make sure that the computer will keep running the time-lapse if the computer shuts off you need to modify
 crontab.
 
-## Use cron to take images on a schedule (time-lapse)
+### Use cron to take images on a schedule (time-lapse)
 
 Crontab is an easy way to schedule repeating tasks so it can be used as another way to do time-lapse imaging, like time-lapse imaging.  
 
@@ -323,7 +324,7 @@ sudo service cron restart
 **Note:** Time is set after booting and internet access, but if no internet, it will set time to last available time, which can cause problems. Hope you have wifi!!!! Alt: can hardwire a clock with battery.
 
 
-## Assembling your time-lapse into a short movie
+### Assembling your time-lapse into a short movie
 
 first we need to write all of image names into a text file, but we can do that using the command line  
 
@@ -361,7 +362,7 @@ omxplayer timelapse.avi
 ```
 
 
-##Now let's move your movie to a folder with your name
+###Now let's move your movie to a folder with your name
 
 ```
 
@@ -386,7 +387,7 @@ mv /home/pi/images/timelapse2/timelapse.mp4 /home/pi/yourname/timelapse.mp4
 ls -l /home/pi/yourname/
 
 ```
-##Opensource tools for image analysis
+###Opensource tools for image analysis
 
 Collecting time lapse images are great for demonstrating concepts of plant growth, plant movement, and circadian rhythms.
 But you might want to actually measure plant growth and plant movement. There are several opensource tools that make these measurements easier.
@@ -399,7 +400,7 @@ We built PlantCV (Plant Computer Vision) to process plant images specifically, b
 *  R is a programming language that is used for statistical analysis, more information [here](http://www.r-project.org/)
 *  R studio is a free graphical user interface (GUI) to make running R code easier. More info [here](https://www.rstudio.com/)
 
-**Process images with ImageJ**
+####Process images with ImageJ
 
 [ImageJ](imagej.nih.gov/ij/) is a free image quantification software developed by the National Institutes of Health (NIH). Go [here](http://imagej.nih.gov/ij/docs/guide/index.html) for detailed instructions.
 
@@ -426,7 +427,7 @@ To measure length:
 5. Draw line over stem in picture  
 6. Select Analyze--> Measure  
 
-**Process images with PlantCV**
+####Process images with PlantCV
 
 [PlantCV](http://plantcv.danforthcenter.org/) is software we wrote at the Danforth Center to extract biologically meaningful information from images of plants. Go to [here](http://plantcv.danforthcenter.org/pages/documentation/function_docs/vis_tutorial.html) for detailed instructions.
 
@@ -453,4 +454,9 @@ You just processed one image, you will see a bunch of information print out to t
 If you had many images to process you would then use the "parallelization" script, which runs the 'single image script' over a bunch of images and
 then saves the data to a database. We won't be doing that today but the instructions are [here](http://plantcv.danforthcenter.org/pages/documentation/function_docs/vis_tutorial.html).
 If you had run a full set of data (many plants growing over a period of time) you could then use R to analyze the data.
+
+#Day 2
+
+
+#Day 3
 
