Added genome assembly

--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -459,4 +459,111 @@ If you had run a full set of data (many plants growing over a period of time) yo
 
 
 #Day 3
+* Introduction to DNA and RNA sequencing
+* [Assembling genome sequences](#assembling-genome-sequences)
+
+
+##Assembling genome sequences
+You will be using data from a high-throughput DNA sequencing technology (Illumina MiSeq) to assemble the chloroplast genome of the plant *Setaria viridis*. The read data has been pre-processed to contain reads likely to be from the chloroplast genome (only about 120 kb). You will use the Velvet genome assembly program, and as a group we will try different Kmer length settings to identify the best assembly by compiling and comparing some of the basic assembly statistics.
+
+###Log in to the Danforth Center Bioinformatics infrastructure
+You will use the Secure Shell (ssh) program to remotely log into the Danforth Center Bioinformatics servers from your Raspberry Pi computers.
+
+Step 1: Launch LXTerminal
+Step 2: Use ssh to log into the log-in server
+
+ - Below the server name, user name and password are not included for security but these will be provided in class.
+ - If you are asked about the RSA key fingerprint – enter yes.
+ - Enter your password at the prompt.
+
+```
+ssh username@hostname.ddpsc.org
+```
+
+Setp 3: Log into one of the computing servers
+
+- Server names will be provided at the workshop.
+- If you are asked about the RSA key fingerprint – enter yes.
+- Enter your password at the prompt.
+
+```
+ssh hostname
+```
+
+Like your Raspberry Pi, this is a Linux operating system (CentOS instead of Raspbian). Most of the commands you used on [Day 1](day-1) will work here, except for startx.
+
+Let's check where we are:
+
+```
+pwd
+
+ls -l
+```
+
+You are all logged in as the same user with the same home directory, so make your own folder to keep your work separate:
+
+```
+mkdir <yourname>
+
+# where <yourname> = your name without spaces
+```
+
+###Working with big data files
+You will use output from an Illumina MiSeq sequencer to assemble the *Setaria viridis* chloroplast genome. DNA sequence data output from Illumina and other sequencer instraments is commonly in FASTQ format. The files output from these kind of sequencing platforms can be very large (10s of gigabytes). Opening huge files can make your system unresponsive, so instead you can use a few Linux commands to get a look at these files.
+
+First move to the directory containing the FASTQ files:
+
+```
+cd /home/csiw/miseq_data
+```
+
+Look at the first ten lines of one of the files (e.g. sviridis_1000_paired_shuffled.fastq):
+
+```
+head sviridis_1000_paired_shuffled.fastq
+```
+
+Look at the last ten lines:
+
+```
+tail sviridis_1000_paired_shuffled.fastq
+```
+
+Scroll through the file one line or page at a time:
+
+```
+less sviridis_1000_paired_shuffled.fastq
+
+# type q to exit
+```
+
+### Using velvet – a de Bruijn graph based genome assembler
+Keep in mind – for more info – the Velvet site is [here](http://www.ebi.ac.uk/~zerbino/velvet/). And the Velvet manual is [here](http://www.ebi.ac.uk/~zerbino/velvet/Manual.pdf).Velvet is run from the command line in two steps: **velveth** and **velvetg**.**velveth** collects the input read data and puts it in proper data structures for **velvetg**.**velvetg** builds the de Bruijn graph and processes it to generate an assembly.Each of you will run **velveth** and **velvetg** with a different kmer setting so that as a group we can identify the best assembly. When running, velvet will output text to the screen that tells you where it is in the assembly process.Before you start assembling the data make sure you are in your working directory. From wherever you are you can do that by typing:```cd /home/csiw/yourname/
+
+# where yourname is the directory name you provided above
+```
+
+Each of you will be assigned a Kmer and will need to adjust the commands below to match your Kmer. Kmers should range from 17 to 149 (only use odd numbers) in increments of 2 (e.g. 17, 19, 21, and so on)
+
+#### Running velveth
+```
+velveth sviridis_chloroplast 39 -fastq \
+-shortPaired /home/csiw/miseq_data/sviridis_180_paired_shuffled.fastq \
+-shortPaired2 /home/csiw/miseq_data/sviridis_500_paired_shuffled.fastq \
+-shortPaired3 /home/csiw/miseq_data/sviridis_1000_paired_shuffled.fastq
+```
+
+#### Running velvetg
+```
+velvetg sviridis_chloroplast -cov_cutoff auto -ins_length 180 \
+-ins_length2 500 -ins_length3 1000 -min_contig_lgth 152 -exp_cov auto  
+```
+
+When velvet completes it will provide some basic assembly statistics to the screen at the end of its output. For example:```[40.587843] Estimated Coverage = 439.325700[40.587893] Estimated Coverage cutoff = 219.662850Final graph has 55 nodes and n50 of 1744, max 14933,
+total 76437, using 1261095/1546056 reads```
+Please record the following:- Kmer used- Estimated coverage- Number of “nodes” (i.e. contigs)- N50- Max contig length- Total contig length- % of input reads assembled (i.e. 1261095/1546056 = 81.6%) 
+
+Your assembly is found in ./sviridis_chloroplast/contigs.fa
+
+
 
