Adding proposed Day 2 topics

--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -456,6 +456,12 @@ then saves the data to a database. We won't be doing that today but the instruct
 If you had run a full set of data (many plants growing over a period of time) you could then use R to analyze the data.
 
 #Day 2
+* Retrieving data from rePhoto
+* Image analysis with ImageJ
+* Image analysis with PlantCV
+* Image analysis with Python
+* Introduction to social media data analysis
+
 
 
 #Day 3
