Added ImageJ and PlantCV to Day 2

--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -355,79 +355,48 @@ mencoder -nosound -ovc lavc -lavcopts vcodec=mpeg4:aspect=16/9:vbitrate=8000000 
 ```
 
 ```
-# To play your video use the program omxplayer
+# To play your video use the program mplayer
 
-omxplayer timelapse.avi
-
-```
-
-
-###Now let's move your movie to a folder with your name
+mplayer timelapse.avi
 
 ```
 
-#let's make a directory (folder) with your name (no spaces)
+#Day 2
+* Retrieving data from rePhoto
+* [Opensource tools for image analysis](#opensource-tools-for-image-analysis)
+  * [Image analysis with ImageJ](#image-analysis-with-imagej)
+  * [Image analysis with PlantCV](#image-analysis-with-plantcv)
+  * [Image analysis with Python](#image-analysis-with-python)
+* Introduction to social media data analysis
 
-mkdir /home/pi/yourname
-
-#for example: mkdir /home/pi/malia
-
-# then let's list the files to see if your folder is there
-
-ls -l /home/pi/
-
-# you should see a folder with your name
-
-#now let's move your timelapse.mp4 movie there, make sure you replace the "yourname" with your actual name
-
-mv /home/pi/images/timelapse2/timelapse.mp4 /home/pi/yourname/timelapse.mp4
-
-#check that the file is in there
-
-ls -l /home/pi/yourname/
-
-```
-###Opensource tools for image analysis
-
-Collecting time lapse images are great for demonstrating concepts of plant growth, plant movement, and circadian rhythms.
-But you might want to actually measure plant growth and plant movement. There are several opensource tools that make these measurements easier.
+## Opensource tools for image analysis
+Collecting time lapse images are great for demonstrating concepts of plant growth, plant movement, and circadian rhythms. But you might want to actually measure plant growth and plant movement. There are several opensource tools that make these measurements easier.
 
 *  ImageJ is [here](http://fiji.sc/Fiji)
 *  OpenCV (Open Computer Vision) is a library of image processing functions for a few languages (C/C++, Java, Python) that is widely used.  
 There is documentation [here](http://opencv.org/). OpenCV is a very powerful library but it is not the most user friendly.
 We built PlantCV (Plant Computer Vision) to process plant images specifically, building off of OpenCV and other available Python libraries.  
-*  PlantCV documentation and information is located [here](http://plantcv.danforthcenter.org/)
-*  R is a programming language that is used for statistical analysis, more information [here](http://www.r-project.org/)
-*  R studio is a free graphical user interface (GUI) to make running R code easier. More info [here](https://www.rstudio.com/)
+*  PlantCV documentation and information is located [here](http://plantcv.danforthcenter.org/).
+*  Python has several image processing libraries including [Pillow](https://pillow.readthedocs.org/) and [scikit-image](http://scikit-image.org/).
+*  R is a programming language that is used for statistical analysis, more information [here](http://www.r-project.org/).
+*  R studio is a free graphical user interface (GUI) to make running R code easier. More info [here](https://www.rstudio.com/).
 
-####Process images with ImageJ
-
+###Image analysis with ImageJ
 [ImageJ](imagej.nih.gov/ij/) is a free image quantification software developed by the National Institutes of Health (NIH). Go [here](http://imagej.nih.gov/ij/docs/guide/index.html) for detailed instructions.
 
-Install imageJ on your Raspberry Pi using the following commands:  
-
-```
-sudo apt-get update	
-```  
-
-```
-sudo apt-get install imageJ
-```
-After installation, imageJ will be installed in the Menu-->Graphics tab
-
-Open imageJ, and open a file (This can be any image, or the ImageJ/sample_image_ruler.jpg')
+Open an image file with ImageJ. Using the filebrowser navigate to the /home/pi/csiw_2015/outreach/sample_images directory. Select one of the plant species folders, right click on an image file and select ImageJ as the program to open the file with.
 
 An example of how to measure length and angles can be found [here](https://www.youtube.com/watch?v=8IrTXUDqmXI)
 
 To measure length:  
-1. Use the line tool to draw a known length (use 1 cm in example)  
+1. Use the line tool to draw a known length (the blue top of each plant carrier is 11.2 cm wide on each side)  
 2. Select Analyze--> Measure  
 3. Select Analyze--> Set Scale  
-4. Set known distance to 1, unit of length to cm  
+4. Set known distance to 11.2, unit of length to cm  
 5. Draw line over stem in picture  
-6. Select Analyze--> Measure  
+6. Select Analyze--> Measure
 
-####Process images with PlantCV
+###Process images with PlantCV
 
 [PlantCV](http://plantcv.danforthcenter.org/) is software we wrote at the Danforth Center to extract biologically meaningful information from images of plants. Go to [here](http://plantcv.danforthcenter.org/pages/documentation/function_docs/vis_tutorial.html) for detailed instructions.
 
@@ -454,13 +423,6 @@ You just processed one image, you will see a bunch of information print out to t
 If you had many images to process you would then use the "parallelization" script, which runs the 'single image script' over a bunch of images and
 then saves the data to a database. We won't be doing that today but the instructions are [here](http://plantcv.danforthcenter.org/pages/documentation/function_docs/vis_tutorial.html).
 If you had run a full set of data (many plants growing over a period of time) you could then use R to analyze the data.
-
-#Day 2
-* Retrieving data from rePhoto
-* Image analysis with ImageJ
-* Image analysis with PlantCV
-* Image analysis with Python
-* Introduction to social media data analysis
 
 
 
