--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -12,7 +12,8 @@ Missouri EPSCoR
 * [Day 2](#day-2)
 * [Day 3](#day-3)
 
-#Day 1  
+<a name="day-1"></a>
+#Day 1 
 *  [Introduction to Raspberry Pi Computers](#introduction-to-raspberry-pi)
 *  [Introduction to Github and collaborative coding](#introduction-to-github-and-linux)
 *  [More with Linux](#basic-linux-shell-commands)
@@ -360,7 +361,7 @@ mencoder -nosound -ovc lavc -lavcopts vcodec=mpeg4:aspect=16/9:vbitrate=8000000 
 mplayer timelapse.avi
 
 ```
-
+<a name="day-2"></a>
 #Day 2
 * Retrieving data from rePhoto
 * [Opensource tools for image analysis](#opensource-tools-for-image-analysis)
@@ -425,7 +426,7 @@ then saves the data to a database. We won't be doing that today but the instruct
 If you had run a full set of data (many plants growing over a period of time) you could then use R to analyze the data.
 
 
-
+<a name="day-3"></a>
 #Day 3
 * Introduction to DNA and RNA sequencing
 * [Assembling genome sequences](#assembling-genome-sequences)
